[tool.poetry]
name = "Courier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.4"
black = "^20.8b1"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
pymongo = "^3.11.0"
Flask-PyMongo = "^2.3.0"
dnspython = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
